feat(ex01): working

--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -2,6 +2,7 @@ NAME := phonebook
 FLAGS := -std=c++98 -Wall -Wextra -Werror
 
 SRCS := $(addprefix srcs/,\
+	main.cpp \
 	Contact.cpp \
 	PhoneBook.cpp \
 )
