tweak(ex01): add pragma, better include

--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,5 +1,5 @@
 NAME := phonebook
-FLAGS := -std=c++98 -Wall -Wextra -Werror
+FLAGS := -std=c++98 -Wall -Wextra -Werror -I includes
 
 SRCS := $(addprefix srcs/,\
 	main.cpp \
