--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 .DS_Store
 
 #CPP
-ex00/megaphone
-ex01/phonebook
-ex02/logger
-ex02/19920104_091532.log
+mod00/ex00/megaphone
+mod00/ex01/phonebook
+mod00/ex02/logger
+mod00/ex02/19920104_091532.log
