tweak(mod01/ex03): rm debug flags from Makefile

--- a/mod01/ex03/Makefile
+++ b/mod01/ex03/Makefile
@@ -1,5 +1,5 @@
 NAME := violence
-FLAGS := -std=c++98 -Wall -Wextra -Werror -I includes -g -fsanitize=address,undefined
+FLAGS := -std=c++98 -Wall -Wextra -Werror -I includes
 
 SRCS := $(addprefix srcs/,\
 	main.cpp \
