--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,12 @@ mod00/ex00/megaphone
 mod00/ex01/phonebook
 mod00/ex02/logger
 mod00/ex02/19920104_091532.log
+
 mod01/ex00/brainz
 mod01/ex01/brainz
 mod01/ex02/hi_brain
 mod01/ex03/violence
 mod01/ex04/sed
 mod01/ex05/harl
+
+mod02/ex00/fixed
