feat(mod01/ex06): working

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ mod01/ex02/hi_brain
 mod01/ex03/violence
 mod01/ex04/sed
 mod01/ex05/harl
+mod01/ex06/harlFilter
 
 mod02/ex00/fixed
 mod02/ex01/fixed
