feat(mod05/ex03): working

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ mod05/ex00/bureaucrat
 mod05/ex01/forms
 mod05/ex02/bureaucracy
 mod05/ex02/*_shrubbery
+mod05/ex03/bureaucracy
+mod05/ex03/*_shrubbery
