--- a/.gitignore
+++ b/.gitignore
@@ -41,4 +41,5 @@ mod05/ex01/forms
 mod05/ex02/bureaucracy
 mod05/ex02/*_shrubbery
 mod05/ex03/bureaucracy
-mod05/ex03/*_shrubbery
+
+mod06/ex00/convert
