fix(mod04/ex02): make the makeSound function virtual instead of the destructor for no reason because of the subject, rename the program name

--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ mod03/ex03/DiamondTrap
 
 mod04/ex00/animal
 mod04/ex01/brains
-mod04/ex02/brains
+mod04/ex02/badAnimal
 mod04/ex03/interfaces
 
 mod05/ex00/bureaucrat
